cloud function refactor

--- a/src/i18n/locales/gb.json
+++ b/src/i18n/locales/gb.json
@@ -41,6 +41,8 @@
     "buttons": "Buttons",
     "timelines": "Timelines",
     "dashboard": "Dashboard",
+    "funds": "Funds",
+    "fed": "FED",
     "billing": "Billing",
     "login": "Login",
     "preferences": "Account preferences",
