Dividend data + tweaks

--- a/src/i18n/locales/gb.json
+++ b/src/i18n/locales/gb.json
@@ -41,6 +41,7 @@
     "buttons": "Buttons",
     "timelines": "Timelines",
     "dashboard": "Dashboard",
+    "dd": "Dividend Dates",
     "nt": "Naked Trader",
     "funds": "Funds",
     "fed": "FED",
