--- a/src/i18n/locales/gb.json
+++ b/src/i18n/locales/gb.json
@@ -44,6 +44,7 @@
     "dd": "Dividend Dates",
     "nt": "Naked Trader",
     "funds": "Funds",
+    "cryptos": "Cryptos",
     "fed": "FED",
     "billing": "Billing",
     "login": "Login",
