fix PB build issues

--- a/src/i18n/locales/gb.json
+++ b/src/i18n/locales/gb.json
@@ -45,6 +45,7 @@
     "nt": "Naked Trader",
     "funds": "Funds",
     "cryptos": "Cryptos",
+    "premium-bonds": "Premium Bonds",
     "testing": "Testing",
     "fed": "FED",
     "billing": "Billing",
