AI page + Cloud function

--- a/src/i18n/locales/gb.json
+++ b/src/i18n/locales/gb.json
@@ -48,6 +48,7 @@
     "premium-bonds": "Premium Bonds",
     "t212": "T212",
     "t212x": "T212-X",
+    "gk": "Gemini-AI",
     "testing": "Testing",
     "fed": "FED",
     "billing": "Billing",
